# duck_party

./: .gitignore  CMakeLists.txt  readme.md
source/: CMakeLists.txt
source/DuckClasses/: CMakeLists.txt  Mallard.cpp  Mallard.h  RoboDuck.cpp  RoboDuck.h  TerminalDisplayer.cpp  TerminalDisplayer.h
source/DuckParty/: CMakeLists.txt  CustomMessages.h  DisplayActor.h  Displayable.h  Duck.h  DuckActor.h  main.cpp
source/Example/: CMakeLists.txt
