#add_library(caf_core STATIC IMPORTED)
#add_library(tinyxml2 STATIC IMPORTED)
#add_library(gtest STATIC IMPORTED)
#add_library(gtest_main STATIC IMPORTED)
#add_library(gmock STATIC IMPORTED)
#add_library(gmock_main STATIC IMPORTED)
#add_library(nidaqmx SHARED IMPORTED)
#add_library(nisync SHARED IMPORTED)
# add_library(mds_idds SHARED IMPORTED)
# add_library(mds_dds SHARED IMPORTED)
# add_library(mds_dds_cf SHARED IMPORTED)
# add_library(mds_dds_qos_provider SHARED IMPORTED)
# add_library(mds_dds_xml SHARED IMPORTED)

#set_target_properties(caf_core PROPERTIES IMPORTED_LOCATION "${CAF_SOURCE_DIR}/../build/caf-build/libcaf_core/Debug/")
# set_target_properties(tinyxml2 PROPERTIES IMPORTED_LOCATION "${importTinyXmlDir}/lib/libtinyxml2.a")
# set_target_properties(gtest PROPERTIES IMPORTED_LOCATION "${importGTestDir}/lib/libgtest.a")
# set_target_properties(gtest_main PROPERTIES IMPORTED_LOCATION "${importGTestDir}/lib/libgtest_main.a")
# set_target_properties(gmock PROPERTIES IMPORTED_LOCATION "${importGTestDir}/lib/libgmock.a")
# set_target_properties(gmock_main PROPERTIES IMPORTED_LOCATION "${importGTestDir}/lib/libgmock_main.a")
#set_target_properties(nidaqmx PROPERTIES IMPORTED_LOCATION "${importDriversDir}/lib/libnidaqmx.so")
#set_target_properties(nisync PROPERTIES IMPORTED_LOCATION "/usr/lib/x86_64-linux-gnu/libnisync.so")
# set_target_properties(mds_idds PROPERTIES IMPORTED_LOCATION "${importIddsDir}/lib/libidds.so")
# set_target_properties(mds_dds PROPERTIES IMPORTED_LOCATION "${importIddsDir}/lib/libdds.so")
# set_target_properties(mds_dds_cf PROPERTIES IMPORTED_LOCATION "${importIddsDir}/lib/libdds_cf.so")
# set_target_properties(mds_dds_qos_provider PROPERTIES IMPORTED_LOCATION "${importIddsDir}/lib/libdds_qos_provider.so")
# set_target_properties(mds_dds_xml PROPERTIES IMPORTED_LOCATION "${importIddsDir}/lib/libdds_xml.so")

add_subdirectory(DuckClasses)
add_subdirectory(DuckParty)
add_subdirectory(Example)
#add_subdirectory(DuckTests)
#add_subdirectory(DuckPartyTests)
#add_subdirectory(ImplementationClasses)
#add_subdirectory(Actors)
#add_subdirectory(ImplementationTests)
#add_subdirectory(ActorTests)
# add_subdirectory(HWTests)
# add_subdirectory(MdsIddsTests)
# add_subdirectory(InstrumentNode)